# genart

./: .gitignore  Cargo.toml  main.rs
develop/: Cargo.toml
develop/src/: main.rs
examples/: Cargo.toml
examples/brushes/: ink.rs  pencil.rs  sand.rs  stroke.rs  test.rs
examples/lines/: smooth.rs  straight.rs  wooble.rs
hantai/: Cargo.toml
hantai/src/: display.rs  main.rs
leafs/: Cargo.toml
leafs/examples/: palette.rs
leafs/src/: l_system.rs  main.rs
leafs/src/draw/: mod.rs
leafs/src/systems/: leaf.rs  mod.rs  simple_leafs.rs
leafs/src/turtle/: polygon.rs
leafs/src/utils/: layout.rs  mod.rs
leafs/src/utils/draw/: mod.rs
lines/examples/: lines_all.rs  lines_animated.rs  lines_charcoal.rs  lines_ink.rs  lines_pencil.rs  lines_sand.rs  lines_stroke.rs
lines/src/: lib.rs
permutations/: Cargo.toml
permutations/examples/: circles_animated.rs  circles_static.rs  straight.rs  straight_animated.rs  straight_static.rs
permutations/src/: main.rs
pipes/: Cargo.toml
pipes/examples/: static.rs
pipes/src/: main.rs
plants/: Cargo.toml
plants/examples/: leaf.rs
plants/examples/leafs/: palette.rs
plants/src/systems/: leaf.rs
plants/src/turtle/: polygon.rs
plants/src/utils/draw/: mod.rs
sketches/: Cargo.toml
sketches/examples/: square_tiles.rs
sketches/examples/filling_palette/: brush.rs  halton_23.rs  japanese_brush.rs  marker.rs  pencil.rs  stroke.rs  uniform.rs
sketches/examples/line_palette/: brush.rs  japanese_brush.rs  marker.rs  pencil.rs  stroke.rs
sketches/examples/spaces/: brush.rs  coloured.rs  contours.rs  japanese_brush.rs  marker.rs  pencil.rs
sketches/examples/spaces/coloured/: brush.rs  halton_23_brush.rs  halton_23_pencil.rs  marker.rs
sketches/examples/tiles/square/: brush.rs  japanese_brush.rs  marker.rs  pencil.rs  stroke.rs
sketches/examples/vibrations/: lines.rs
sketches/src/: lib.rs  main.rs
squiggles/: Cargo.toml
squiggles/examples/: squiggles_xp_1_keep.rs
squiggles/src/: main.rs  tile.rs
utils/: Cargo.toml
utils/examples/algorithm/: space.rs
utils/examples/algorithm/space/: space.rs
utils/examples/algorithms/: space.rs
utils/examples/brushes/: ink.rs  stroke.rs
utils/examples/draw/filling/: brush.rs  halton_23.rs  japanese_brush.rs  marker.rs  pencil.rs  stroke.rs  uniform.rs
utils/examples/draw/line/: brush.rs  japanese_brush.rs  marker.rs  pencil.rs  stroke.rs
utils/examples/geometry/hatch/: stroke.rs
utils/examples/geometry/line/: wooble.rs
utils/examples/lines/: smooth.rs  straight.rs  wooble.rs
utils/examples/paints/: fill_rectangle.rs
utils/examples/texture/fill/: rectangle.rs
utils/src/: lib.rs
utils/src/algorithm/: mod.rs  space.rs  squiggle.rs
utils/src/algorithms/: space.rs
utils/src/app/: dynamic_artwork.rs  mod.rs  nannou_app.rs  static_artwork.rs
utils/src/app/dynamic_artwork_testr/: artwork.rs  constants.rs  mod.rs
utils/src/brush/: mod.rs  pencil.rs
utils/src/data_structures/: graph.rs
utils/src/draw/: filling.rs  line.rs  mod.rs
utils/src/dynamic_artwork/: base_model.rs
utils/src/geometry/: coord.rs  filling.rs  hatch.rs  hatches.rs  line.rs  mod.rs
utils/src/static_artwork/: artwork.rs  base_model.rs  constants.rs  mod.rs
utils/src/texture/: brush.rs  fill.rs  image_sampler.rs  mod.rs
vibrations/: Cargo.toml
vibrations/src/: lib.rs
