[package]
name = "examples"
version = "0.1.0"
edition = "2021"
authors = ["Donatien Criaud <donatien.criaud@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
geo = "0.23.0"
nannou = "0.18.1"
utils = { path = "../utils" }

# Lines
[[example]]
name = "lines_straight"
path = "lines/straight.rs"
[[example]]
name = "lines_wooble"
path = "lines/wooble.rs"
[[example]]
name = "lines_smooth"
path = "lines/smooth.rs"

# Brushes
[[example]]
name = "brushes_stroke"
path = "brushes/stroke.rs"
