[package]
name = "sketches"
version = "0.1.0"
edition = "2021"
authors = ["Donatien Criaud <donatien.criaud@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.23.0"
nannou = "0.18.1"
rand = "0.8.5"
rand_distr = "0.4.3"
utils = { path = "../utils" }

# Vibrations
[[example]]
name = "vibrations_lines"
path = "examples/vibrations/lines.rs"

# Spaces
[[example]]
name = "spaces_coloured"
path = "examples/spaces/coloured.rs"
[[example]]
name = "spaces_contours"
path = "examples/spaces/contours.rs"

# Tiles
[[example]]
name = "tiles_square_stroke"
path = "examples/tiles/square/stroke.rs"
[[example]]
name = "tiles_square_japanese_brush"
path = "examples/tiles/square/japanese_brush.rs"
[[example]]
name = "tiles_square_pencil"
path = "examples/tiles/square/pencil.rs"
