[package]
name = "sketches"
version = "0.1.0"
edition = "2021"
authors = ["Donatien Criaud <donatien.criaud@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.23.0"
nannou = "0.18.1"
rand = "0.8.5"
rand_distr = "0.4.3"
utils = { path = "../utils" }

# Vibrations
[[example]]
name = "vibrations_lines"
path = "examples/vibrations/lines.rs"

# Spaces
[[example]]
name = "spaces_coloured"
path = "examples/spaces/coloured.rs"
[[example]]
name = "spaces_pencil"
path = "examples/spaces/pencil.rs"
[[example]]
name = "spaces_marker"
path = "examples/spaces/marker.rs"
[[example]]
name = "spaces_brush"
path = "examples/spaces/brush.rs"

# Tiles
[[example]]
name = "tiles_square_stroke"
path = "examples/tiles/square/stroke.rs"
[[example]]
name = "tiles_square_marker"
path = "examples/tiles/square/marker.rs"
[[example]]
name = "tiles_square_pencil"
path = "examples/tiles/square/pencil.rs"
[[example]]
name = "tiles_square_brush"
path = "examples/tiles/square/brush.rs"

# Lines
[[example]]
name = "line_palette_stroke"
path = "examples/line_palette/stroke.rs"
[[example]]
name = "line_palette_marker"
path = "examples/line_palette/marker.rs"
[[example]]
name = "line_palette_pencil"
path = "examples/line_palette/pencil.rs"
[[example]]
name = "line_palette_brush"
path = "examples/line_palette/brush.rs"

# Fillings
[[example]]
name = "filling_palette_uniform"
path = "examples/filling_palette/uniform.rs"
[[example]]
name = "filling_palette_halton_23"
path = "examples/filling_palette/halton_23.rs"
[[example]]
name = "filling_palette_stroke"
path = "examples/filling_palette/stroke.rs"
[[example]]
name = "filling_palette_marker"
path = "examples/filling_palette/marker.rs"
[[example]]
name = "filling_palette_brush"
path = "examples/filling_palette/brush.rs"
[[example]]
name = "filling_palette_pencil"
path = "examples/filling_palette/pencil.rs"
