[package]
name = "utils"
version = "0.1.0"
edition = "2021"
authors = ["Donatien Criaud <donatien.criaud@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.23.0"
nannou = "0.18.1"
rand = "0.8.5"
rand_distr = "0.4.3"

# Algorithms
[[example]]
name = "algorithm_space"
path = "examples/algorithm/space.rs"

# Draw
[[example]]
name = "draw_line_stroke"
path = "examples/draw/line/stroke.rs"
[[example]]
name = "draw_line_japanese_brush"
path = "examples/draw/line/japanese_brush.rs"
[[example]]
name = "draw_line_pencil"
path = "examples/draw/line/pencil.rs"

# Geometry
[[example]]
name = "geometry_line_straight"
path = "examples/geometry/line/straight.rs"
[[example]]
name = "geometry_line_wooble"
path = "examples/geometry/line/wooble.rs"
[[example]]
name = "geometry_line_smooth"
path = "examples/geometry/line/smooth.rs"

# Texture
[[example]]
name = "texture_brush_stroke"
path = "examples/texture/brush/stroke.rs"
[[example]]
name = "texture_brush_pencil"
path = "examples/texture/brush/pencil.rs"
[[example]]
name = "texture_brush_ink"
path = "examples/texture/brush/ink.rs"
[[example]]
name = "texture_fill_fill_rectangle"
path = "examples/texture/fill/fill_rectangle.rs"
