[package]
name = "utils"
version = "0.1.0"
edition = "2021"
authors = ["Donatien Criaud <donatien.criaud@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
geo = "0.23.0"
halton = "0.2.1"
nannou = "0.18.1"
rand = "0.8.5"
rand_distr = "0.4.3"

# Algorithms
[[example]]
name = "algorithm_space"
path = "examples/algorithm/space/space.rs"

# Geometry
[[example]]
name = "geometry_line_wooble"
path = "examples/geometry/line/wooble.rs"

# Draw
[[example]]
name = "draw_line_stroke"
path = "examples/draw/line/stroke.rs"
[[example]]
name = "draw_line_japanese_brush"
path = "examples/draw/line/japanese_brush.rs"
[[example]]
name = "draw_line_pencil"
path = "examples/draw/line/pencil.rs"
[[example]]
name = "draw_line_brush"
path = "examples/draw/line/brush.rs"
[[example]]
name = "draw_filling_uniform"
path = "examples/draw/filling/uniform.rs"
[[example]]
name = "draw_filling_halton_23"
path = "examples/draw/filling/halton_23.rs"
[[example]]
name = "draw_filling_japanese_brush"
path = "examples/draw/filling/japanese_brush.rs"
